fix: add z-index to 10000

--- a/src/assets/css/loading.css
+++ b/src/assets/css/loading.css
@@ -8,6 +8,6 @@
   background: rgba(0, 0, 0, 0.3);
   visibility: visible;
   opacity: 1;
-  z-index: 100;
+  z-index: 10000;
   color: white;
 }
